--- a/public/css/app.css
+++ b/public/css/app.css
@@ -7551,6 +7551,10 @@ video {
   z-index: auto;
 }
 
+main {
+  height: calc(100vh - 6rem);
+}
+
 @media (min-width: 640px) {
   .sm\:appearance-none {
     -webkit-appearance: none;
