--- a/public/css/app.css
+++ b/public/css/app.css
@@ -7563,6 +7563,11 @@ video {
   padding-right: 0.5rem;
 }
 
+.row.row-margin [class^=col] {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
 .card {
   background-color: #fff;
   border-radius: 0.5rem;
