--- a/public/css/app.css
+++ b/public/css/app.css
@@ -7605,6 +7605,62 @@ video {
   font-weight: 700;
 }
 
+.input {
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
+  width: 100%;
+  border-radius: 0.25rem;
+  background-color: #fff;
+  border-width: 1px;
+  padding-left: 0.75rem;
+  padding-right: 2rem;
+  width: 100%;
+  height: 2.5rem;
+  font-size: 0.875rem;
+  color: #4a5568;
+  outline: 0;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+}
+
+.input:focus {
+  border-color: #4299e1;
+}
+
+.input::-webkit-input-placeholder {
+  opacity: 0.25;
+  font-size: 0.75rem;
+}
+
+.input::-moz-placeholder {
+  opacity: 0.25;
+  font-size: 0.75rem;
+}
+
+.input:-ms-input-placeholder {
+  opacity: 0.25;
+  font-size: 0.75rem;
+}
+
+.input::-ms-input-placeholder {
+  opacity: 0.25;
+  font-size: 0.75rem;
+}
+
+.input::placeholder {
+  opacity: 0.25;
+  font-size: 0.75rem;
+}
+
+.input.textarea {
+  height: 8rem;
+  padding-top: 0.5rem;
+}
+
+.input.input-sm {
+  height: 2rem;
+}
+
 @media (min-width: 640px) {
   .sm\:appearance-none {
     -webkit-appearance: none;
